[Diseño] Se estandariza el diseño en paginas de IVAO Ecuador

--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
             <div class="info-training" id="info-training">
                 <img src="assets/logo.png" alt="Logo de Ivao Ecuador">
                 <h1>Training Request System</h1>
-                <p>Bienvenido al sistema de solicitud de entrenamiento y examenes.
+                <p>Bienvenido al sistema de solicitud de entrenamiento y exámenes.
                     El departamento de entrenamiento de IVAO Ecuador lo invita
                     a que solicite su formación o examen para que pueda incrementar sus niveles de conocimiento
                     y a la vez logre acceder a nuevos rangos.
                 </p>
-                <!--<p>Los entrenamientos son dados los mejores instructores, los cuales se apoyan de la
-                    documentacion oficial de IVAO.</p>-->
                 <a href="https://ec.ivao.aero/atc/documents/IVAO%20Ecuador%20-%20Lineamientos%20para%20Ex%C3%A1menes%20ATC.pdf" target="_blank" class="btn-documents">Ver documentación </a>
             </div>
             <div class="form-training" id="form-training">
@@ -46,8 +44,8 @@
                                         <label for="">Nombres completos:</label>
                                         <input type="text" placeholder="Escribe tu nombre" name="name">
             
-                                        <label for="">Correo electronico:</label>
-                                        <input type="text" placeholder="Escribe tu correo electronico" name="email">
+                                        <label for="">Correo electrónico:</label>
+                                        <input type="text" placeholder="Escribe tu correo electrónico" name="email">
             
                                         <label for="">VID:</label>
                                         <input type="text" placeholder="Escribe tu VID" name="vid">
@@ -95,8 +93,8 @@
                                             <option value="AS1 - Bienvenido a IVAO">AS1 - Bienvenido a IVAO</option>
                                             <option value="AS1 - Abriendo el control">AS1 - Abriendo el control</option>
                                             <option value="Asx - Fraseología">Asx - Fraseología</option>
-                                            <option value="ASx - Metereología">ASx - Metereología</option>
-                                            <option value="ASx - Espacios Aereos">ASx - Espacios Aereos</option>
+                                            <option value="ASx - Metereología">ASx - Meteorología</option>
+                                            <option value="ASx - Espacios Aereos">ASx - Espacios Aéreos</option>
                                             <option value="ASx - Gestión del Aeródromo">ASx - Gestión del Aeródromo</option>
                                             <option value="ASx - Gestión del CTR-ATZ">ASx - Gestión del CTR-ATZ</option>
                                             <option value="ASx - Probando el control">ASx - Probando el control</option>
@@ -104,24 +102,24 @@
                                             <option value="ADC - Instrucción Teórica I">ADC - Instrucción Teórica I</option>
                                             <option value="ADC - Instrucción Teórica II">ADC - Instrucción Teórica II</option>
                                             <option value="ADC - Instrucción Práctica I">ADC - Instrucción Práctica I</option>
-                                            <option value="ADC - Simulación Exámen">ADC - Simulación Exámen</option>
+                                            <option value="ADC - Simulación Exámen">ADC - Simulación Examen</option>
                                             <option value="APC - Introducción">APC - Introducción</option>
                                             <option value="APC - Sesión Teórica I">APC - Sesión Teórica I</option>
                                             <option value="APC - Sesión Teórica II">APC - Sesión Teórica II</option>
                                             <option value="APC - Sesión Práctica I">APC - Sesión Práctica I</option>
-                                            <option value="APC - Simulación Exámen">APC - Simulación Exámen</option>
+                                            <option value="APC - Simulación Exámen">APC - Simulación Examen</option>
                                             <option value="ACC - Introducción">ACC - Introducción</option>
                                             <option value="ACC - Sesión Teórica I">ACC - Sesión Teórica I</option>
                                             <option value="ACC - Sesión Teórica II">ACC - Sesión Teórica II</option>
                                             <option value="ACC - Sesión Práctica I">ACC - Sesión Práctica I</option>
-                                            <option value="ACC - Simulación Exámen">ACC - Simulación Exámen</option>
+                                            <option value="ACC - Simulación Exámen">ACC - Simulación Examen</option>
                                         </select>
                                         <select name="rank_pilot" id="pilot">
                                             <option value="no_data">Selecciona el entrenamiento</option>
                                             <option value="FS1 - Bienvenido a la Familia IVAO!">FS1 - Bienvenido a la Familia IVAO!</option>
                                             <option value="FS1 - Primer Vuelo">FS1 - Primer Vuelo</option>
                                             <option value="FSx - Fraseología">FSx - Fraseología</option>
-                                            <option value="FSx - Metereología">FSx - Metereología</option>
+                                            <option value="FSx - Metereología">FSx - Meteorología</option>
                                             <option value="FSx - Espacios Aéreo">FSx - Espacios Aéreos</option>
                                             <option value="FSx - Fundamentos del Vuelo">FSx - Fundamentos del Vuelo</option>
                                             <option value="FSx - Navegación VFR">FSx - Navegación VFR</option>
@@ -129,7 +127,7 @@
                                             <option value="PP - Introducción">PP - Introducción</option>
                                             <option value="PP - Sesión Teórica I">PP - Sesión Teórica I</option>
                                             <option value="PP - Sesión Práctica I">PP - Sesión Práctica I</option>
-                                            <option value="PP - Simulación Exámen">PP - Simulación Exámen</option>
+                                            <option value="PP - Simulación Exámen">PP - Simulación Examen</option>
                                             <option value="SPP - Introducción">SPP - Introducción</option>
                                             <option value="SPP - Sesión Teórica I">SPP - Sesión Teórica I</option>
                                             <option value="SPP - Sesión Práctica I">SPP - Sesión Práctica I</option>
@@ -178,7 +176,7 @@
                 <div class="last-info">
                     <div class="last-info-box">
                         <p>¿Necesitas más información? Contacta con un staff</p>
-                        <a href="https://chat.whatsapp.com/ExCqf9eOdmzFE1R7uKKxLC" target="_blank">Whatsapp</a>
+                        <a href="https://chat.whatsapp.com/ExCqf9eOdmzFE1R7uKKxLC" target="_blank">WhatsApp</a>
                         <a href="https://discord.gg/hJ3xNWVuP9" target="_blank">Discord</a>
                     </div>
                 </div>
